# request-estimation-tool

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  nginx.conf
.streamlit/: config.toml
backend/: pyproject.toml  run_server.py
backend/scripts/: create_admin.py
backend/src/api/: app.py  routes.py  schemas.py
backend/src/auth/: dependencies.py  ldap_provider.py  middleware.py  models.py  oidc_provider.py  schemas.py  service.py
backend/src/cli/: ipc_handler.py
backend/src/database/: engine.py  migrations.py  models.py  schema.sql
backend/src/engine/: allocator.py  calculator.py  calibration.py  feasibility.py
backend/src/imports/: __init__.py  csv_importer.py  service.py
backend/src/integrations/: base.py  email_adapter.py  jira_adapter.py  outline_adapter.py  redmine_adapter.py  service.py  sync_scheduler.py
backend/src/notifications/: __init__.py  service.py  templates.py
backend/src/reports/: comparison_report.py  excel_report.py  executive_summary.py  pdf_report.py  templates.py  trend_report.py  word_report.py
backend/tests/: test_allocator.py  test_api.py  test_auth.py  test_calculator.py  test_calibration.py  test_feasibility.py  test_integrations.py  test_models.py  test_phase6_api.py  test_reports.py
data/: seed_data.json
docs/: SRS.md  redmine-integration-guide.md  test_effort_estimation_tool_srs.docx
frontend_desktop/: EstimationTool.sln
frontend_desktop/EstimationTool/: EstimationTool.csproj  Program.cs  (+1 more)
frontend_nicegui/: app.py  requirements.txt
frontend_web/: app.py  auth_helper.py
(+86 files in other folders)
