[project]
name = "estimation-tool-backend"
version = "3.0.0"
description = "Test Effort Estimation Tool - Python Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "ldap3>=2.9.0",
    "authlib>=1.3.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
mysql = [
    "PyMySQL>=1.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
